--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "start": "node index.js"
   },
   "author": "lance-ding",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.14.0",
+    "socket.io": "^1.7.2"
+  }
 }
